--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <title>L2 MIASHS</title>
 <head>
-    <meta charset="UTF-8">
+   <!-- <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> -->
 </head>
 <body>
     <h1>je suis <br> un titre</h1>
@@ -12,4 +13,45 @@
     <a target="_blank" href="http://github.com/chanwinharold">le site de mon petit harold</a>
     <img src="mael/Capture d'écran 2025-09-16 133643.png" alt="c'est une capture d'ecran">
 </body>
+</html>
+<!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="https://www.univ-tlse2.fr/">
+    <head>
+        
+        <title>L2 MIASHS</title>
+    </head>
+
+    <head>    
+    </head>
+    <body>
+        <h1>L2 <abbr title=" mathematique informatique appliquée au sciences humaines et sociales" > MIASHS</abbr> à L'UT2J</h1>
+        <h2>Présentation</h2>
+        <p>Deux spécialités sont possibles.</p>
+        <ul> 
+            <li>Informatique <abbr title="sciences humaines et sociales">SHS</abbr></li>
+             <li>Mathematique <abbr title="sciences humaines et sociales">SHS</abbr></li>
+
+        </ul>
+        <h2>Contenu</h2>
+        <h3>Enseignements communs aux deue parcours</h3>
+         <ul> 
+            <li>BD </li>
+             <li>algo </li>
+
+        </ul>
+        <h3>Enseignements propres au parcours info</h3>
+        <ul> 
+            <li>Client Web </li>
+            
+
+        </ul>
+        <h2>Contact</h2>
+        <p>
+            <strong><a target="_blank" href="https://www.univ-tlse2.fr/">UT2J</a> <br></strong>
+            <em>5 All. Antonio Machado</em> <br>
+            31058 Toulouse
+        </p>
+        <h2>Plan de L'UT2J</h2>
+    </body>
 </html>
