--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="https://www.univ-tlse2.fr/">
@@ -37,5 +38,7 @@
             31058 Toulouse
         </p>
         <h2>Plan de L'UT2J</h2>
+    <details><strong><a target="_blank" href="mael/entrainement.html">site pour l'exercice d'entrainement n°1</a></strong><summary><strong>Lien pour la recete de crèpes</strong></summary></details>
+    
     </body>
 </html>
